--- a/style.css
+++ b/style.css
@@ -1,33 +1,73 @@
 body, html {
-    @charset "UTF-8";
-/* Body */
-body {
-	font-family: source-sans-pro;
-	background-color: white;
-	margin-top: 0px;
-	margin-right: 0px;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	font-style: normal;
-	font-weight: 200;
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+ /* Position and center the image to scale nicely on all screens */
+
+.center-narrow {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+    
+.center-wide {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
-/* The hero image */
-.hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (feet.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg");
+.center-window {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+ position: fixed;
+}
+
+.centertext {
+  text-align: center;
+    
+}
+
+.par-centertext {
+  margin: auto;
+  width: 50%;
+  padding: 100px;
+    font-size: 125%; 
+}
+
+.parallax { 
+  /* The image used */
+  background-image: url("feet.jpg");
 
   /* Set a specific height */
-  height: 50%;
+  height: 500px; 
 
-  /* Position and center the image to scale nicely on all screens */
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
+}
+
+
+.hero-image {
+  /* Create the parallax scrolling effect */
+  
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;      
 }
 
 /* Place text in the middle of the image */
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -35,4 +75,42 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-size: 250%;
 }
+
+/*.row, .column, .column img and @ media all work together to create your responsive image displays*/
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create three equal columns that sit next to each other */
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a one column-layout instead of two or three columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+}
+
+
+    
+
+
+    
+
+
+
