--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body, html {
 .hero-image {
   /* Create the parallax scrolling effect */
   
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg");
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg"), alt= decribe the image HERE for accessibility purposes;
   height: 100%;
   background-attachment: fixed;
   background-position: center;
