--- a/style.css
+++ b/style.css
@@ -3,61 +3,11 @@ body, html {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
- /* Position and center the image to scale nicely on all screens */
-
-.center-narrow {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-    
-.center-wide {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-}
-
-.center-window {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
- position: fixed;
-}
-
-.centertext {
-  text-align: center;
-    
-}
-
-.par-centertext {
-  margin: auto;
-  width: 50%;
-  padding: 100px;
-    font-size: 125%; 
-}
-
-.parallax { 
-  /* The image used */
-  background-image: url("feet.jpg");
-
-  /* Set a specific height */
-  height: 500px; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 
 .hero-image {
-  /* Create the parallax scrolling effect */
+  /* This is your opening image. You will need to change feet.jpg to something of your choice*/
   
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg"), alt= decribe the image HERE for accessibility purposes;
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg");
   height: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -78,7 +28,57 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
   font-size: 250%;
 }
 
-/*.row, .column, .column img and @ media all work together to create your responsive image displays*/
+/* This is what controls that cool parallax scrolling effect. Change the image "feet.jpg" below to your image.*/
+/*You can always add more parlax assets on your web document, just follow the directions at the bottom of the index.html.*/
+.parallax-1 { 
+  background-image: url("feet.jpg");
+
+  /* Set a specific height */
+  height: 500px; 
+
+  /* control the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+/* This section of css. helps organize images to position and center the image to scale nicely on all screens */
+
+.center-small-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+    
+.center-large-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+
+/*this css. element centers elements*/
+
+.centertext {
+  text-align: center;
+    
+}
+
+/* This css. section controls the paragraph chunks*/
+
+.par-centertext {
+  margin: auto;
+  width: 50%;
+  padding: 100px;
+    font-size: 125%; 
+}
+
+
+/*The following .css is responsible for your photo grid .row, .column, .column img and @ media all work together to create your responsive image displays. Change the images on index.html. Remember, the images need to be in your project file folder */
 
 .row {
   display: flex;
@@ -86,7 +86,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
   padding: 0 4px;
 }
 
-/* Create three equal columns that sit next to each other */
+/* Create 3 equal columns that sit next to each other */
 .column {
   flex: 25%;
   max-width: 25%;
@@ -105,6 +105,9 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
     flex: 50%;
     max-width: 50%;
 }
+
+
+
 
 
     
