--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
 
 .par-centertext {
   margin: auto;
-  width: 50%;
+  width: 600px;
   padding: 100px;
     font-size: 125%; 
 }
