--- a/style.css
+++ b/style.css
@@ -78,6 +78,13 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
 
 }
 
+.centertexter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 .iframe-video{
   text-align: center;
   position: relative;
