--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
+    justify-content: center;
 }
 
 /* Create 3 equal columns that sit next to each other */
