--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .hero-image {
-  /* This is your opening image. You will need to change feet.jpg to something of your choice*/
+  /* This is your "hero image" or "wide image." You will need to change feet.jpg to match your asset*/
   
 background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("feet.jpg");
   height: 100%;
@@ -16,7 +16,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
   position: relative;      
 }
 
-/* Place text in the middle of the image */
+/* Places text in the middle of the image */
 
 .hero-text {
   text-align: center;
@@ -26,9 +26,11 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
   transform: translate(-50%, -50%);
   color: white;
   font-size: 250%;
+
+
 }
 
-.hero-text h2 {   /* Copied from h6, but preserving hierarchies (no level jumps) */
+.hero-text h2 {   /* This section adds the text stylings for your hero block */
   display: block;
     font-size: 0.67em;
     margin-block-start: 2.33em;
@@ -38,10 +40,10 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
     font-weight: bold;
 }
 
-/* This is what controls that cool parallax scrolling effect. Change the image "feet.jpg" below to your image.*/
-/*You can always add more parlax assets on your web document, just follow the directions at the bottom of the index.html.*/
+/* This code controls that cool parallax image and scrolling effect. Change the image "feet4.jpg" below to match your asset.*/
+/*You can always add more parllax assets on your web document, just follow the directions at the bottom of the index.html.*/
 .parallax-1 { 
-  background-image: url("feet.jpg");
+  background-image: url("feet4.jpg");
 
   /* Set a specific height */
   height: 500px; 
@@ -71,7 +73,7 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
 }
 
 
-/*this css. element centers elements*/
+/*this css. element centers text elements*/
 
 .centertext {
   text-align: center;
