--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
+/* Select readable font and text/background colors with good contrast. To search for different Google Fonts, go to https://www.w3schools.com/howto/howto_google_fonts.asp */
+
 body, html {
-  height: 100%;
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    background-color: white;
+  }  
 
 .hero-image {
-    /* - HERO -
-    This code controls your "hero image." You will need to change hero.jpg to match your asset */
+/* This selector controls the "hero image" class. You may need to change "hero.jpg" name/format to match your asset, or vice-versa */
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("hero.jpg");
     height: 100%;
     background-attachment: fixed;
@@ -14,98 +17,293 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-}
+  }
 
-/* Places text in the middle of the image */
+/* This selector places text in the middle of the image */
 .hero-text {
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+/* The next two selectors control hero-text font properties. 2em is 2x inherited font-size value. 5 em is 5x stated value. */
+.hero-text h1 {
+    font-family: inherit;
+    font-size: 5em;
     color: white;
-    font-size: 250%;
-}
+  }
 
 .hero-text h2 {
-    /* This section adds the text stylings for your hero block */
+    font-family: inherit;
+    font-size: 2em;
+    color: white;
+  }
+  
+
+ /* The text-block class selector controls the text-box on screens >800px. You will also need to adjust values in the next text-box selector. */
+.text-block {
     display: block;
-    font-size: 0.67em;
-    margin-block-start: 2.33em;
-    margin-block-end: 2.33em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+    width: 55%;
+    background-color: inherit;
+    padding: 0px;
+    border: 0px solid black;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: inherit;
+    font-size: 1.5em;
+    color: inherit;
   }
 
-.textblock {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 100px;
-    padding-right: 100px;
+ /* This code helps your text-block scale for screens ≤800px. */
+  @media screen and (max-width: 800px) {
+    .text-block {  
+        display: block;
+        width: 90%;
+        background-color: inherit;
+        padding: 0px;
+        border: 0px solid black;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-left: auto;
+        margin-right: auto;
+        font-family: inherit;
+        font-size: 1.25em;
+        color: inherit;
+    }
   }
 
 
-.blockquote {
-    background-color: #;
-    border-top: 3px solid #000;
-    border-bottom: 3px solid #000;
+ /* The pull-quote class selector uses large text and border top/bottom properties.  */
+.pull-quote {
+    display: block;
+    width: 70%;
+    background-color: inherit;
     padding-left: 20px;
     padding-right: 20px;
-    margin: 10%;
-}
+    border-top: 3px solid #000;
+    border-bottom: 3px solid #000;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    font: inherit;
+    font-size: 1em;
+    color: inherit;
+  }
 
-/* Change your button colors and other attributes here. */
-.buttonbox {
+
+/* - Bulleted Points or List -
+Unordered list element selector. Change unordered list from disc (default) to circle, square, or none. */
+ul {
+    list-style-type: default;
+    padding-left: none;
+    font: inherit;
+    font-size: 1em;
+    line-height: 2.2;
+    color: inherit;
+  }
+
+/* Ordered list element selector. Change ordered list to upper-roman or lower-alpha. */
+ol {
+    list-style-type: default;
+    padding-left: none;
+    font: inherit;
+    font-size: 1em;
+    line-height: 2.2;
+    color: inherit;
+  }
+
+
+/* - Link that Looks Like a Button -
+Button-box class selector uses Flex Box Design (flex display) to scale the element in one dimension. */
+.button-box {
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 200px;
     border: 0px solid #;
-}
+    align-items: center;
+    justify-content: center;
+  }
 
+/* Change button colors and other attributes here. */
 .button {
-    background-color: #2A5DB0;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
     display: inline-block;
-    font-size: 16px;
+    background-color: #2A5DB0;
+    padding: 15px 32px;
+    border: none;
     cursor: pointer;
-}
+    font: inherit;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+  }
 
+/* Hover effect improves accessibility. */
 .button:hover {
     background-color: #4682B4;
+  }
+
+
+/* - CSS Flexbox Layout -
+CSS Flexbox creates responsive layouts for images, text, and other content. Reuse .column class to create additional grids with different proportions for specific content */
+
+.flexbox-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  text-align: center;
+ }
+
+.row {
+   display: flex;
+   flex-wrap: wrap;
+   padding: 0 4px;
+   justify-content: center;
+ }
+
+/* Change max-width value depending on number of columns. */
+.column {
+   flex: 25%;
+   max-width: 25%;
+   padding: 0 4px;
+ }
+
+.column img  {
+   margin-top: 8px;
+   vertical-align: middle;
+   width: 100%;
+ }
+
+/* CSS Grid Responsive layout - makes grid a one column-layout instead of two or three columns */
+@media screen and (max-width: 800px) {
+.column {
+       flex: 75%;
+       max-width: 75%;
+   }
+ }
+
+ 
+/* - Frame class selector -
+Use CSS box model to style image content. Adjust frame/filter class selector properties to customize. Copy, paste, rename class selector to quickly create alternative image stylings. */
+.frame {
+    display: block;
+    background: orange;
+    padding: 5px;
+    border: 5px solid orangered;
+    border-radius: 3%;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    filter: grayscale(%);
+    filter: blur(px);
+    filter: hue-rotate(deg);
 }
 
-/* Change unordered list from disc (default) to circle, square, or none. */
-.ul {
-    list-style-type: disc;
-    font-size: 20pt;
-    padding: 20px;
-}
 
-/* Change orderd list from upper-roman to lower-alpha. */
-.ol {
-    list-style-type: upper-roman;
-    font-size: 20pt;
-    padding: 20px;
-}
+/* - Polaroid - 
+Polaroid class selector and container. Adjust Polaroid width here. */
+.polaroid {
+    display: block;
+    width: 50%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: none;
+    margin-bottom: none;
+  }
 
-/* Learn other list conventions: https://www.w3schools.com/cssref/pr_list-style-type.asp */
+.polaroid img {
+    width: 100%;  /* Keep 100% */
+    filter: grayscale(%);
+    filter: blur(px);
+    filter: hue-rotate(deg);
+  }
 
-.video {
+.polaroid-caption {
     text-align: center;
+    padding: 10px 20px;
+  }
+
+
+/*  - Image Container with Text Box -
+Add text to your image and control text-box location*/
+.image-container {
+  display: block;
+  position: relative;
+  width: 90%;
+  margin-top: 100px;
+  margin-bottom:100px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.image-container img {
+  width: 100%;   /* Keep 100%. Add Filters.*/
+}
+
+.image-container-text {
+  position: absolute;
+  /*Using max-with property with pixels will prevent a left aligned box from over-scrolling*/
+  max-width: 300px;
+  /*Change location right/left and top/bottom. To center use top 50% left 50% */
+  bottom: 20px;
+  right: 20px;
+  /*Using rgba (red,blue,green, alpha) allows us to control color and opacity. For a white tinted text box, use 255, 255, 255, .3 */
+  background-color: rgba(0, 0, 0, .3);
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+
+/*  - Parallax -
+This code controls that cool parallax image and scrolling effect. Change the image "fuego.jpg" below to match your asset.*/
+.parallax {
+    background-image: url("parallax.jpg");
+/* Set a specific height */
+    height: 500px;
+/* control the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 100px;
+    margin-bottom: 0px;
+  }
+
+/* This code stops the parallax image and scrolling effect for small screens--at the moment, iPhones just don't like it.*/
+@media screen and (max-width: 768px) {
+    .parallax {
+		    background-attachment: inherit;
+        height: 400px;
+	  }
+  }
+
+
+/*  - YouTube Video -
+Uses container to control video across different screen sizes. */
+.video {
+    width: 75%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    margin: auto;
+    text-align: center;
+  }
 
 .video-container {
   	position:relative;
+    height:0;
+  	overflow:hidden;
   	padding-bottom:56.25%;
   	padding-top:30px;
-  	height:0;
-  	overflow:hidden;
-    text-align: center;
   }
 
 .video-container iframe, .video-container object, .video-container embed {
@@ -116,128 +314,49 @@ body, html {
   	height:100%;
   }
 
-
-/* Preset Image Controls
-
-This section of CSS helps organize images to position and center the image to scale nicely on all screens */
-
-.center-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.imgageblock {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 100px;
-      padding-bottom: 100px;
+  @media screen and (max-width: 800px) {
+    .video {
+        width: 90%;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
   }
 
 
-/*  - PARALLAX -
-This code controls that cool parallax image and scrolling effect. Change the image "fuego.jpg" below to match your asset.*/
+/*  - Caption -
+Style caption left, center, justify, right. */
+.caption {
+    display: block;
+    padding: none;
+    border: none;
+    margin: none;
+    text-align: center;
+  }
 
 
-.parallax {
-    background-image: url("parallax.jpg");
-
-    /* Set a specific height */
-    height: 500px;
-
-    /* control the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-top: 100px;
-    padding-bottom: 100px;
-
-}
-
-
-/* This code stops the parallax image and scrolling effect for small screens--at the moment, iPhones just don't it.*/
-@media screen and (max-width: 768px) {
-	.parallax {
-		background-attachment: inherit;
-    height: 100px;
-	}
-}
-
-
-/* -Preset Photo Grid -
-
-The following CSS is responsible for your photo grid .row, .column, .column img and @ media all work together to create your responsive image displays. Change the images on index.html.*/
-
-.photogrid {
-   text-align: center;
-   padding-top: 100px;
-   padding-bottom: 100px;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-    justify-content: center;
-}
-
-/* Create 3 equal columns that sit next to each other */
-.column {
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
-}
-
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 100%;
-}
-
-
-/* Responsive layout - makes grid a one column-layout instead of two or three columns */
-@media screen and (max-width: 800px) {
-    .column {
-        flex: 75%;
-        max-width: 75%;
-    }
-}
-/* - Preset Text Block Controls-
-this CSS element centers text elements*/
-
-
-/* This CSS section controls the paragraph, video blocks*/
-@media screen and (min-width: 800px) {
-    .textblock, .video {
-        margin: auto;
-        width: 50%;
-        padding: 100px;
-        font-size: 125%;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .textblock, .video {
-        margin: auto;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-top: 100px;
-        padding-bottom: : 1000px;
-    }
-}
-
-
-#logo {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
+/*  - Logo -
+Logo width controlled inline */
+.logo {
+    display: block;
+    padding: 10px;
+    border: 0px solid black;
+    margin-top: 200px;
+    margin-bottom: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    font: inherit;
     font-size: 12pt;
     text-align: center;
   }
 
-#footer {
-        text-align: center;
-    }
+
+/*  - Footer -
+Add a Copyright */
+.footer {
+    border: none;
+    padding: 10px;
+    margin: auto;
+    font: inherit;
+    font-size: inherit;
+    text-align: center;    
+  }
